--- a/hw04.md
+++ b/hw04.md
@@ -1,8 +1,5 @@
 # 作业4
 ## 使用维基百科，解释以下概念。
-1)ASCII
-2)Color
-我的解答
 1. ASCII:ASCII abbreviated from American Standard Code for Information Interchange, is a character encoding standard for 
 electronic communication. ASCII codes represent text in computers, telecommunications equipment, and other devices. Most modern 
 character-encoding schemes are based on ASCII, although they support many additional characters.ASCII is the traditional name 
@@ -34,3 +31,17 @@ mantis shrimp) with up to 12 spectral receptor types thought to work as multiple
 其他物种的“眼睛”的光接收性也与人类的相似，因此导致相应不同的颜色感知，这些颜色感知不容易彼此比较。 例如，蜜蜂和大黄蜂具有对紫外线敏感的三色彩色视觉，但
 对红色不敏感。 Papilio蝴蝶有六种类型的光感受器，可能有五焦视觉。[3]动物王国中最复杂的彩色视觉系统已在人口动物中发现（如螳螂虾）具有多达12种光谱受体类
 型被认为可用作多个二色单元。
+## 简单回答以下问题：
+1. 写出字符“A”,“中”的 ASCII 码、Unicode 码、utf-8 编码。
+2. 黄色(yellow)的RGB编码是( , , )
+3. 从网上下载一个 BMP 格式图像,用图片编辑工具另存在 jpg、 png、tiff 格式。问三种格式中,哪种格式显示质量好?相对于
+BMP 格式,压缩率各是多少?
+4. Winrar压缩文件是lossless, or lossy 方法？
+## 我的解答
+1. “A” ASCII码：0x41；Unicode码：0x00 41；utf-8 编码：0x41
+“中” ASCII码：无；Unicode码：0x4e 2d；utf-8: 0xe4 0xb8 0xad
+2. 黄色（yellow）RGB（RED：255,GREEN：255,BLUE,0）
+3. png格式显示质量最好
+BMP（1.14MB） jpg（75.7kb） png（615kb） tiff(530kb)
+压缩率  jpg 93.53%；png：47.32%; tiff:54.60%
+4. Winrar是无损压缩软件，所以是lossless
