--- a/hw04.md
+++ b/hw04.md
@@ -26,7 +26,7 @@ mantis shrimp) with up to 12 spectral receptor types thought to work as multiple
 通过颜色类别描述的人类 视觉感知的特征，其名称为红色，橙色，黄色，绿色，蓝色或紫色。颜色的这种看法由刺激导出视锥细胞在人眼通过电磁辐射在可见光谱。颜色类
 别和颜色的物理规格通过从它们反射的光的波长与对象相关联。这种反射受物体的物理特性控制，如光吸收，发射光谱等。通过定义颜色空间，颜色可以通过坐标进行数字识
 别，在1931年也被国际照明委员会与国际商定的颜色名称（红色，橙色等）全球协议命名。在RGB色彩空间例如是对应于人的颜色空间三色视和该光的三个频带响应三种视锥
-细胞类型：长波长，接近564-580峰值波长（红色）; 中波长，在534-545 nm附近达到峰值（绿色）; 和短波长光，接近420-440纳米（蓝色）。[1] [2] 在其他颜色空
+细胞类型：长波长，接近564-580峰值波长（红色）; 中波长，在534-545 nm附近达到峰值（绿色）; 和短波长光，接近420-440纳米（蓝色）。 在其他颜色空
 间中也可以有三个以上的颜色尺寸，例如在CMYK颜色模型中，其中一个尺寸与颜色的色彩相关。
 其他物种的“眼睛”的光接收性也与人类的相似，因此导致相应不同的颜色感知，这些颜色感知不容易彼此比较。 例如，蜜蜂和大黄蜂具有对紫外线敏感的三色彩色视觉，但
 对红色不敏感。 Papilio蝴蝶有六种类型的光感受器，可能有五焦视觉。[3]动物王国中最复杂的彩色视觉系统已在人口动物中发现（如螳螂虾）具有多达12种光谱受体类
