--- a/hw04.md
+++ b/hw04.md
@@ -40,7 +40,7 @@ BMP 格式,压缩率各是多少?
 ## 我的解答
 1. “A” ASCII码：0x41；Unicode码：0x00 41；utf-8 编码：0x41
 “中” ASCII码：无；Unicode码：0x4e 2d；utf-8: 0xe4 0xb8 0xad
-2. 黄色（yellow）RGB（RED：255,GREEN：255,BLUE,0）
+2. 黄色（yellow）RGB（255,255,0）
 3. tiff格式显示质量最好
 BMP（1.14MB） jpg（75.7kb） png（615kb） tiff(530kb)
 压缩率  jpg 6.47%；png：52.58%; tiff:45.40%
