--- a/hw04.md
+++ b/hw04.md
@@ -3,7 +3,7 @@
 1. ASCII:ASCII abbreviated from American Standard Code for Information Interchange, is a character encoding standard for 
 electronic communication. ASCII codes represent text in computers, telecommunications equipment, and other devices. Most modern 
 character-encoding schemes are based on ASCII, although they support many additional characters.ASCII is the traditional name 
-for the encoding system; the Internet Assigned Numbers Authority (IANA) prefers the updated name US-ASCII, which clarifies that 
+for the encoding system; the Internet Assigned Numbers Authoirty (IANA) prefers the updated name US-ASCII, which clarifies that 
 this system was developed in the US and based on the typographical symbols predominantly in use there.  中文 ASCII是从缩写美国标准
 信息交换码，是一种字符编码用于电子通信标准。ASCII代码表示计算机，电信设备和其他设备中的文本。大多数现代字符编码方案都基于ASCII，尽管它们支持许多其他
 字符。ASCII是编码系统的传统名称; 在互联网编号分配机构（IANA）喜欢更新的名称US-ASCII，由此可知该系统是在美国主要使用的开发以及基于印刷符号存在。
