--- a/hw05.md
+++ b/hw05.md
@@ -28,6 +28,7 @@ We called that (00001111)2is a mask which only makes low 4 bits to work.Fill the
         1 0 1
         0 1 1
         1 1 0
+   异或门操作就是将两个布尔值进行运算，若两个布尔值相等，则输出值为0，若不相等，则输出值为1。
 3.
 4. Y  =  (A') ⊕ (AB)    
    真值表A B A' AB 输出Y
