--- a/hw06.md
+++ b/hw06.md
@@ -1,9 +1,7 @@
 # 作业6
 ## 作业列表
-1. According to the von Neumann architecture, List basic parts of a 
-computer.
-2. A computer has 64 MB (megabytes) of memory. How many bits are 
-needed to address any single byte in memory?
+1. According to the von Neumann architecture, List basic parts of a computer.
+2. A computer has 64 MB (megabytes) of memory. How many bits are needed to address any single byte in memory?
 3. List basic parts of a CPU, include cache or not?
 4. What mean secondary storage. List some on your PC. 
 5. 使用维基百科，解释以下概念：
@@ -15,3 +13,45 @@ CPU、RAM、ROM、Bus (computing)、Parallel Computing
 3）小孙买4G * 2 DDR3-1333的内存能提高性能吗？
 4）16G需要多少位地址？
 备注，维基百科（中文）“DDR3 SDRAM”
+## 我的解答
+1. 中央处理单元 ，控制单元 ，逻辑/运算单元 ，内存单元 ，输入装置 ，输出装置 ，辅助储存器。
+2. 50 bytes；
+3. 运算逻辑部件，寄存器部件，控制部件 含有高速缓存；
+4. 二级存储是计算机主存储器或内存之外的所有可访问数据存储器。 硬盘，光碟；
+5.
+### CPU 
+A central processing unit (CPU) is the electronic circuitry within a computer that carries out the instructions of a 
+computer program by performing the basic arithmetic, logical, control and input/output (I/O) operations specified by the 
+instructions. The computer industry has used the term "central processing unit" at least since the early 1960s.Traditionally, 
+the term "CPU" refers to a processor, more specifically to its processing unit and control unit (CU), distinguishing these core 
+elements of a computer from external components such as main memory and I/O circuitry.  中文 中央处理单元（CPU）是电子电路一个内计算
+机，其执行所述指令一个的计算机程序通过执行基本的算术，逻辑，控制和输入/输出（I / O），由所述指令指定的操作。计算机行业至少从20世纪60年代初就开始使
+用“中央处理单元”这个术语。传统上，术语“CPU”指的是处理器，更具体地说是指其处理单元和控制单元（CU），将计算机的这些核心元件与外部组件区分开来，例如存储器
+和I / O电路。
+### RAM
+Random-access memory is a form of computer data storage that stores data and machine code currently being used. A random-access 
+memory device allows data items to be read or written in almost the same amount of time irrespective of the physical location of 
+data inside the memory. In contrast, with other direct-access data storage media such as hard disks, CD-RWs, DVD-RWs and the 
+older magnetic tapes and drum memory, the time required to read and write data items varies significantly depending on their 
+physical locations on the recording medium, due to mechanical limitations such as media rotation speeds and arm movement. 中文 随
+机存取存储器是一种形式的计算机数据存储，其存储数据和机器代码当前正在使用。甲随机存取存储器设备允许数据被项读取或写入几乎相同的时间量，而不管存储器内数
+据的物理位置的。相比之下，与其他直接访问数据存储介质，如硬盘，CD-RW，DVD-RW和较旧的磁带和鼓存储器，由于诸如介质旋转速度和臂移动之类的机械限制，读取
+和写入数据项所需的时间根据它们在记录介质上的物理位置而显着变化。
+### ROM
+Read-only memory (ROM) is a type of non-volatile memory used in computers and other electronic devices. Data stored in ROM can only be modified slowly, with difficulty, or not at all, so it is mainly used to store firmware (software that is closely tied to specific hardware, and unlikely to need frequent updates) or application software in plug-in cartridges.  中文 只读存储器（ROM）是计算机和其他电子设备中使用的一种非易失性存储器。存储在ROM中的数据只能慢慢修改，比较困难，或根本没有，因此它主要用来存储固件（软件即紧密绑定到特定的硬件，并不太可能需要经常更新）或应用软件的插件墨盒。
+### Bus(computing)
+In computer architecture, a bus (a contraction of the Latin omnibus) is a communication system that transfers data between components inside a computer, or between computers. This expression covers all related hardware components (wire, optical fiber, etc.) and software, including communication protocols.
+Early computer buses were parallel electrical wires with multiple hardware connections, but the term is now used for any physical arrangement that provides the same logical function as a parallel electrical bus. Modern computer buses can use both parallel and bit serial connections, and can be wired in either a multidrop (electrical parallel) or daisy chain topology, or connected by switched hubs, as in the case of USB.  中文  在计算机体系结构中，总线是一种在计算机内部或计算机之间传输数据的通信系统。该表达式涵盖所有相关硬件组件（电线，光纤等）和软件，包括通信协议。早期的计算机总线是具有多个硬件连接的并行电线，但该术语现在用于提供与并行电气总线相同的逻辑功能的任何物理布置。现代计算机总线可以使用并行和位串行连接，并且可以以多点（电并行）或菊花链拓扑连接，或者通过交换集线器连接，如USB的情况。
+### Parallel Computing
+Parallel computing is a type of computation in which many calculations or the execution of processes are carried out simultaneously.Large problems can often be divided into smaller ones, which can then be solved at the same time. There are several different forms of parallel computing: bit-level, instruction-level, data, and task parallelism. Parallelism has long been employed in high-performance computing, but it's gaining broader interest due to the physical constraints preventing frequency scaling. As power consumption (and consequently heat generation) by computers has become a concern in recent years, parallel computing has become the dominant paradigm in computer architecture, mainly in the form of multi-core processors.并行计算是一种类型的计算中，许多计算或执行过程是同时进行的。大问题通常可以分成较小的问题，然后可以同时解决。有几种不同形式的并行计算：位级，指令级，数据和任务并行。长期以来，并行性一直被用于高性能计算，但由于物理约束阻止了频率扩展，因此并行性得到了广泛的关注。由于功率消耗（和因此的热产生）由计算机已成为近年来关注的问题，并行计算已成为主流范式计算机体系结构，主要的形式多核处理器。
+6. 云计算是一种按使用量付费的模式，这种模式提供可用的、便捷的、按需的网络访问， 进入可配置的计算资源共享池，这些资源能够被快速提供，只需投入很少的管
+理工作，或与服务供应商进行很少的交互。
+7. 
+### 1)
+"3" 指3代内存 ； "1333" 指默认工作频率是1333MHZ；
+### 2）
+不能；
+### 3）
+不能；
+### 4）
+34位
