--- a/hw07.md
+++ b/hw07.md
@@ -1,4 +1,5 @@
 # 作业7
+## 题目
 1. Program with machine language according to the following c.
 int_8 a = 1;
 int_8 c = a + 3;
@@ -16,3 +17,37 @@ int_8 c = a + 3;
 3）命令式语言（Imperative programming）
 4）函数编程语言（Functional programming）
 5）过程式编程（Procedural programming）
+## 我的解答
+### 第一题
+1. int_8 a = 1;
+   machine language : 00010100 00000001     00000101 10000000
+   assembly code : LOD #1   STO a
+   int_8 c = a + 3;
+   machine language : 00010100 00000011     00000101 10000001      00000000 10000000      00000101 10000010
+   assembly code : LOD #3   STO b     ADD a    STO c
+2. Main memory –> fetch instruction –> Decode instruction –>Registers –>Get data –>Execute the instruction –> Main memory
+   00010100 00000001  读取下条指令：储存1；解码指令；获取数据1；执行指令: 将1存放在寄存器中；
+   00000101 10000000  读取下条指令：将1存在地址a中; 解码指令； 从寄存器处获得数据1；将1导入地址a；
+   00010100 00000011  读取下条指令：储存3；解码指令；获取数据3；执行指令：将3存放在寄存器中；
+   00000101 10000001  读取下条指令：将1存在地址b中; 解码指令； 从寄存器处获得数据3；将3导入地址b；
+   00000000 10000000  读取下条指令：将a与b相加；解码指令； 从地址a和寄存器中分别获取数据1和3；执行指令：将1和3相加得到4；
+   00000101 10000010  读取下条指令：将4存在地址c中；解码指令； 从寄存器处获得数据4；将4导入地址c.
+3. IR：指令寄存器，用来保存当前正在执行的一条指令 
+PC：程序计数器，存放下一条指令在内存中的地址 
+ACC：累加寄存器，功能是当运算器的算术逻辑单元(ALU)执行全部算术和逻辑运算时，为ALU提供一个工作区，暂时存放ALU运算结果
+4. 定义了两个地址a和c，用于存放数据，因为寄存器的个数有限，所以用地址存放数据十分关键。
+### 简答题
+1. 指令和数据
+2. yes.
+3. 例：ADD X :00000000 10000000
+前八位称命令指示，第四位为寻址模式，例子中为0，表示操作数是该地址的内容(若为1，则表示操作数是关于数据)；后八位称为操作数，表示数值或地址，例子中表示
+内存中地址128。整个例子表示加上将内存地址128中的数据。
+### 解释一下词汇
+1. 汇编语言（Assembly Language）  A language that uses mnemonic codes（助记忆符号） to represent machinelanguage instructions.
+2. 编译（Compiler）A program that translates a high-level language program into machine code.
+3. 命令式语言（Imperative programming）Imperative programming is a programming paradigm that uses statements that change a 
+program’s state .
+4. 函数编程语言（Functional programming） Functional programming is a programming paradigm–a style of building the structure and 
+elements of computer programs–that treats computation as the evaluation of mathematical functions and avoid changing-state and 
+mutable data .
+5. 过程式编程（Procedural programming）A programming paradigm, derived from structured programming, based upon the concept of the procedure call.
