--- a/hw07.md
+++ b/hw07.md
@@ -26,12 +26,12 @@ int_8 c = a + 3;
    machine language : 00010100 00000011     00000101 10000001      00000000 10000000      00000101 10000010
    assembly code : LOD #3   STO b     ADD a    STO c
 2. Main memory –> fetch instruction –> Decode instruction –>Registers –>Get data –>Execute the instruction –> Main memory
-   00010100 00000001  读取下条指令：储存1；解码指令；获取数据1；执行指令: 将1存放在寄存器中；
-   00000101 10000000  读取下条指令：将1存在地址a中; 解码指令； 从寄存器处获得数据1；将1导入地址a；
-   00010100 00000011  读取下条指令：储存3；解码指令；获取数据3；执行指令：将3存放在寄存器中；
-   00000101 10000001  读取下条指令：将1存在地址b中; 解码指令； 从寄存器处获得数据3；将3导入地址b；
-   00000000 10000000  读取下条指令：将a与b相加；解码指令； 从地址a和寄存器中分别获取数据1和3；执行指令：将1和3相加得到4；
-   00000101 10000010  读取下条指令：将4存在地址c中；解码指令； 从寄存器处获得数据4；将4导入地址c.
+####   00010100 00000001  读取下条指令：储存1；解码指令；获取数据1；执行指令: 将1存放在寄存器中；
+####   00000101 10000000  读取下条指令：将1存在地址a中; 解码指令； 从寄存器处获得数据1；将1导入地址a；
+####   00010100 00000011  读取下条指令：储存3；解码指令；获取数据3；执行指令：将3存放在寄存器中；
+####   00000101 10000001  读取下条指令：将1存在地址b中; 解码指令； 从寄存器处获得数据3；将3导入地址b；
+####   00000000 10000000  读取下条指令：将a与b相加；解码指令； 从地址a和寄存器中分别获取数据1和3；执行指令：将1和3相加得到4；
+####   00000101 10000010  读取下条指令：将4存在地址c中；解码指令； 从寄存器处获得数据4；将4导入地址c.
 3. IR：指令寄存器，用来保存当前正在执行的一条指令 
 PC：程序计数器，存放下一条指令在内存中的地址 
 ACC：累加寄存器，功能是当运算器的算术逻辑单元(ALU)执行全部算术和逻辑运算时，为ALU提供一个工作区，暂时存放ALU运算结果
