--- a/hw08.md
+++ b/hw08.md
@@ -1,13 +1,14 @@
 # 作业8
-## 阅读 Pseudocode Standard。（答案可以打印）
+## 问题
+### 阅读 Pseudocode Standard。（答案可以打印）
 1. 用伪代码描述将十进制转换成16进制的方法
 2. C语言实现（先用注释写好算法，然后翻译）
 3. 使用 -1, 0, 1, 15, 26，3265 最为输入测试你的程序
-## 名词解释与对比
+### 名词解释与对比
 1. Top-down design
 2.  Work breakdown structure (WBS)
 3. 简述管理学 WBS 与 信息学Top-down设计 的异同
-## 仔细观察您洗衣机的运作过程，运用Top-down设计方法和Pseudocode 描述洗衣机控制程序。假设洗衣机可执行的基本操作如下：
+### 仔细观察您洗衣机的运作过程，运用Top-down设计方法和Pseudocode 描述洗衣机控制程序。假设洗衣机可执行的基本操作如下：
 water_in_switch(open_close) // open 打开上水开关，close关闭
 water_out_switch(open_close) // open 打开排水开关，close关闭
 get_water_volume() //返回洗衣机内部水的高度
@@ -24,3 +25,4 @@ halt(returncode) //停机，success 成功 failure 失败
 wait(time) //等待指定的时间；
 注水(volume,timeout) //在指定时间内完成注水，否则停机；
 排水(timeout)。 等子程序
+### 我的解答
