--- a/hw08.md
+++ b/hw08.md
@@ -3,7 +3,7 @@
 ### 阅读 Pseudocode Standard。（答案可以打印）
 1. 用伪代码描述将十进制转换成16进制的方法
 2. C语言实现（先用注释写好算法，然后翻译）
-3. 使用 -1, 0, 1, 15, 26，3265 最为输入测试你的程序
+3. 使用 -1, 0, 1, 15, 26，3265 作为输入测试你的程序
 ### 名词解释与对比
 1. Top-down design
 2.  Work breakdown structure (WBS)
@@ -25,4 +25,34 @@ halt(returncode) //停机，success 成功 failure 失败
 wait(time) //等待指定的时间；
 注水(volume,timeout) //在指定时间内完成注水，否则停机；
 排水(timeout)。 等子程序
-### 我的解答
+## 我的解答
+### 将十进制数转换为十六进制数
+#### #include<stdio.h>
+#### int main(){
+####     printf("Enter the number to be converted"); //Write"Enter the number to be converted"
+####     int number;
+####     scanf("%d",&number); //Read number
+####     int shang = 1; //Set shang to 1;
+####     int jinzhi = 0; //Set jinzhi to 0;
+####     int result = 0; //Set result to 0;
+####     while(shang != 0){  //While(shang is not zero)
+####         shang = number / 16; //Set shang to number div 16
+####         int yushu = number % 16; //Set yushu to number rem 16
+####         int jinzhi1 = jinzhi ; //Set jinzhi1 to jinzhi
+####         while(jinzhi1 > 0){ //While(jinzhi1 more than 0)
+####             yushu = yushu * 10; //Set yushu to yushu * 10
+####             jinzhi1 --; //Set jinzhi1 to jinzhi1 - 1
+####         } //End While
+####         result = result + yushu; //Set result to result + yushu
+####         number = shang; //Set number to shang
+####         jinzhi ++; //Set jinzhi = jinzhi + 1
+####     } //End While
+####     printf("The answer is"); //Write "The answer is"
+####     printf("%d",result); //Write result
+#### }
+### 名词解释和对比
+1. Top-down design
+自上而下是一种编程风格，是传统程序语言的主流，其中设计从指定复杂的部分开始，然后将它们分成连续的小部分。使用自上而下方法编写程序的技术是编写一个主程
+序，命名它将需要的所有主要功能。之后，编程团队会查看每个功能的要求，并重复该过程。这些划分的子程序最终将执行如此简单的动作，它们可以轻松简洁地编码。
+当所有各种子程序都被编码后，程序就可以进行测试了。通过定义应用程序如何在高层次上聚集在一起，较低级别的工作可以是自包含的。通过定义低级抽象如何被整合
+到更高级别的抽象中，
