--- a/hw08.md
+++ b/hw08.md
@@ -8,7 +8,7 @@
 1. Top-down design
 2.  Work breakdown structure (WBS)
 3. 简述管理学 WBS 与 信息学Top-down设计 的异同
-### 仔细观察您洗衣机的运作过程，运用Top-down设计方法和Pseudocode 描述洗衣机控制程序。假设洗衣机可执行的基本操作如下：
+### 仔细观察您洗衣机的运作过程，运用Top-down设计方法和Pseudocode描述洗衣机控制程序。假设洗衣机可执行的基本操作如下：
 water_in_switch(open_close) // open 打开上水开关，close关闭
 water_out_switch(open_close) // open 打开排水开关，close关闭
 get_water_volume() //返回洗衣机内部水的高度
@@ -56,3 +56,10 @@ wait(time) //等待指定的时间；
 序，命名它将需要的所有主要功能。之后，编程团队会查看每个功能的要求，并重复该过程。这些划分的子程序最终将执行如此简单的动作，它们可以轻松简洁地编码。
 当所有各种子程序都被编码后，程序就可以进行测试了。通过定义应用程序如何在高层次上聚集在一起，较低级别的工作可以是自包含的。通过定义低级抽象如何被整合
 到更高级别的抽象中，
+2. Work breakdown structure (WBS)
+工作分解结构中的项目管理和系统工程，是一个可交付的一个项目的取向分解成更小的组分。工作分解结构是一个关键的项目可交付成果，可将团队的工作组织成可管理
+的部分。在项目管理知识体系（PMBOK 5）定义工作分解结构“总的层次分解范围的工作由执行项目团队完成项目目标和创建所需的交付。”
+3. 同：分解系统以洞察其组成子系统
+异：Top-down由上到下，WBS根据不同类别分成小的部分
+### 仔细观察您洗衣机的运作过程，运用Top-down设计方法和Pseudocode描述洗衣机控制程序。
+1. 请使用伪代码分解“正常洗衣”程序的大步骤。包括注水、浸泡等
