--- a/hw08.md
+++ b/hw08.md
@@ -62,4 +62,10 @@ wait(time) //等待指定的时间；
 3. 同：分解系统以洞察其组成子系统
 异：Top-down由上到下，WBS根据不同类别分成小的部分
 ### 仔细观察您洗衣机的运作过程，运用Top-down设计方法和Pseudocode描述洗衣机控制程序。
-1. 请使用伪代码分解“正常洗衣”程序的大步骤。包括注水、浸泡等
+0. 选择洗衣模式：对应水位，注水时间 
+1. 注水， 水位计计水位 
+2. 浸泡， 计时器计时 
+3. 电机转动, 左3次，右3次 
+4. 排水， 水位计计水位 
+5. 电机转动（脱水） 
+6. 结束
