--- a/hw08.md
+++ b/hw08.md
@@ -63,10 +63,31 @@ wait(time) //等待指定的时间；
 异：Top-down由上到下，WBS根据不同类别分成小的部分
 ### 仔细观察您洗衣机的运作过程，运用Top-down设计方法和Pseudocode描述洗衣机控制程序。
 #### 请使用伪代码分解“正常洗衣”程序的大步骤。包括注水、浸泡等
-0. 水位选择；
+0. 水位及浸泡时间选择；
 1. 开始进水直到所选水位，关水；
-2. 2秒后开始洗涤；
-3. 洗涤时，正转30s，停2s，然后反转30s，停2s；
-4. 如此循环5次，总共320s后开始排水，排空后脱水30s；
-5. 开始清洗，重复（2）～（5），清洗两遍；
+2. 浸泡所需时间；
+3. 洗涤时，正转30s，然后反转30s；
+4. 开始排水；
+5. 脱水30s；
 6. 清洗完成
+#### 进一步用基本操作、控制语句（IF、FOR、WHILE等）、变量与表达式，写出每个步骤的伪代码
+##### READ 用户选择水位和浸泡时间
+##### REPEAT 
+#####     注水
+##### UNTILL （水位 = 注水要求）
+##### REPEAT 
+#####     浸泡
+##### UNTILL （时间 = 时间要求）
+##### REPEAT 
+#####     电机正转
+##### UNTILL （时间 = 30秒）
+##### REPEAT    
+#####     电机反转
+##### UNTILL （时间 = 30秒）   
+##### REPEAT  
+#####     排水
+##### UNTILL  (水位 = 0)
+##### REPEAT
+#####     电机转动
+##### UNTILL  （时间 = 30秒）
+##### 关闭电源
