--- a/hw08.md
+++ b/hw08.md
@@ -91,3 +91,26 @@ wait(time) //等待指定的时间；
 #####     电机转动
 ##### UNTILL  （时间 = 30秒）
 ##### 关闭电源
+### 根据你的实践，请分析“正常洗衣”与“快速洗衣”在用户目标和程序上的异同。你认为是否存在改进（创新）空间，简单说明你的改进意见？ 
+快速洗衣不包含浸泡这个过程。存在，可以稍微增加快速洗衣的电机转动时间，以达到洗干净衣服的目的。
+### 通过步骤3，提取一些共性功能模块（函数），简化“正常洗衣”程序，使程序变得更利于人类理解和修改维护。 
+##### READ 用户选择水位和浸泡时间
+##### REPEAT 
+#####     注水（volumn,timeout）
+##### UNTILL （水位 = 注水要求）
+##### REPEAT 
+#####     浸泡(volumn,timrout)
+##### UNTILL （时间 = 时间要求）
+##### REPEAT 
+#####     电机正转(volumn,timrout)
+##### UNTILL （时间 = 30秒）
+##### REPEAT    
+#####     电机反转(volumn,timrout)
+##### UNTILL （时间 = 30秒）   
+##### REPEAT  
+#####     排水
+##### UNTILL  (水位 = 0)
+##### REPEAT
+#####     电机转动(timrout)
+##### UNTILL  （时间 = 30秒）
+##### 关闭电源
