--- a/hw08.md
+++ b/hw08.md
@@ -99,18 +99,18 @@ wait(time) //等待指定的时间；
 #####     注水（volumn,timeout）
 ##### UNTILL （水位 = 注水要求）
 ##### REPEAT 
-#####     浸泡(volumn,timrout)
+#####     浸泡(volumn,timeout)
 ##### UNTILL （时间 = 时间要求）
 ##### REPEAT 
-#####     电机正转(volumn,timrout)
+#####     电机正转(volumn,timeout)
 ##### UNTILL （时间 = 30秒）
 ##### REPEAT    
-#####     电机反转(volumn,timrout)
+#####     电机反转(volumn,timeout)
 ##### UNTILL （时间 = 30秒）   
 ##### REPEAT  
 #####     排水
 ##### UNTILL  (水位 = 0)
 ##### REPEAT
-#####     电机转动(timrout)
+#####     电机转动(timeout)
 ##### UNTILL  （时间 = 30秒）
 ##### 关闭电源
