--- a/hw09.md
+++ b/hw09.md
@@ -1,8 +1,18 @@
 # 作业9
-根据后面的素材，识别类和对象。阅读“牧师与恶魔过河”（http://www.17yy.com/f/69854.html）的游戏介绍并玩游戏。然后回答问题 
+## 题目
+### 根据后面的素材，识别类和对象。阅读“牧师与恶魔过河”（http://www.17yy.com/f/69854.html）的游戏介绍并玩游戏。然后回答问题 
 1. 游戏涉及哪些类。请列表说明 
 2. 游戏中有哪些对象，各几个。例如，船（一个） 
 3. 类和对象的区别是什么？举一个例子说明 
 4. 游戏中的魔鬼，有哪些属性和方法？ 
 5.假设魔鬼被鼠标点中，会执行onclick事件，请用文字（伪代码）描述这个事件中魔鬼与其他对象沟通的过程。 
 6. 类或对象会是动词吗？
+## 我的解答
+1. 牧师 ，恶魔 ，船 ，鼠标
+2. 船 1个 ；恶魔 3个 ；牧师 3个
+3. 类是对某一类事物的描述，是抽象的；<br/>
+   而对象是一个实实在在的个体，是类的一个实例。
+   比如：“人”是一个类，而“教师”则是“人”的一个实例。
+   对象是函数、变量的集合体；
+   而类是一组函数和变量的集合体，
+   即类是一组具有相同属性的对象集合体。
