--- a/hw09.md
+++ b/hw09.md
@@ -5,14 +5,18 @@
 2. 游戏中有哪些对象，各几个。例如，船（一个） 
 3. 类和对象的区别是什么？举一个例子说明 
 4. 游戏中的魔鬼，有哪些属性和方法？ 
-5.假设魔鬼被鼠标点中，会执行onclick事件，请用文字（伪代码）描述这个事件中魔鬼与其他对象沟通的过程。 
+5. 假设魔鬼被鼠标点中，会执行onclick事件，请用文字（伪代码）描述这个事件中魔鬼与其他对象沟通的过程。 
 6. 类或对象会是动词吗？
 ## 我的解答
 1. 牧师 ，恶魔 ，船 ，鼠标
 2. 船 1个 ；恶魔 3个 ；牧师 3个
 3. 类是对某一类事物的描述，是抽象的；<br/>
-   而对象是一个实实在在的个体，是类的一个实例。
-   比如：“人”是一个类，而“教师”则是“人”的一个实例。
-   对象是函数、变量的集合体；
-   而类是一组函数和变量的集合体，
-   即类是一组具有相同属性的对象集合体。
+   而对象是一个实实在在的个体，是类的一个实例。<br/>
+   比如：“人”是一个类，而“教师”则是“人”的一个实例。<br/>
+   对象是函数、变量的集合体；<br/>
+   而类是一组函数和变量的集合体，<br/>
+   即类是一组具有相同属性的对象集合体。<br/>
+4. 属性 跳跃，坐船，攻击
+   方法 （一侧牧师比魔鬼少时）直接攻击牧师 ，（前面有船时）鼠标点击跳上船，（在船上）鼠标点击坐船
+5. 鼠标点击魔鬼--> 船上满人 --> 魔鬼不动；穿上没满人-->魔鬼跳上船
+6. 可以，类或对象只是反应一种同类实例的集合
