--- a/hw10.md
+++ b/hw10.md
@@ -7,3 +7,20 @@ algorithm with value 50,67,99.<br/>
 思考：为什么选择插入点在list头上、中间、尾巴上的三个数作为算法测试的数据，你能解释吗？<br/>
 3. What is the state of the stack after the following sequence of Push and Pop operations?<br/>
 Push “anne”; Push “get”; Push “your” ; Pop; Push “my” Push “gun” <br/>
+## 我的解答
+1. #include <stdio.h> <br/>
+   int main() { <br/>
+       int a[6] = {0} ; <br/>
+       for(int i = 0;i < 6;++i){ <br/>
+           scanf("%d",&a[i]); <br/>
+       } <br/>
+       for(int j = 0;j < 6;++j){ <br/>
+           for(int k = j;k < 6;++k){ <br/>
+               if(a[j] > a[k]){ <br/>
+                   int c = a[j]; <br/>
+                   a[j] = a[i]; <br/>
+                   a[i] = c; <br/>
+               }
+           }
+       }
+       for()
