--- a/hw10.md
+++ b/hw10.md
@@ -20,7 +20,11 @@ Push “anne”; Push “get”; Push “your” ; Pop; Push “my” Push “gu
                    int c = a[j]; <br/>
                    a[j] = a[i]; <br/>
                    a[i] = c; <br/>
-               }
-           }
-       }
-       for()
+               }<br/>
+           }<br/>
+       }<br/>
+       for(int i = 0;i < 6;++i){ <br/>
+           printf("%d\t",a[i]); <br/>
+       }<br/>
+   } <br/>
+2. 
