--- a/hw10.md
+++ b/hw10.md
@@ -27,4 +27,24 @@ Push “anne”; Push “get”; Push “your” ; Pop; Push “my” Push “gu
            printf("%d\t",a[i]); <br/>
        }<br/>
    } <br/>
-2. 
+2. #include <stdio.h> <br/>
+   int main() { <br/>
+       int a[6] = {0} ; <br/>
+       for(int i = 0;i < 6;++i){ <br/>
+           scanf("%d",&a[i]); <br/>
+       } <br/>
+       int x;
+       scanf("%d",&x);
+       for(int i = 0;i < 6;++i){
+           if(a[i] > x){
+               for(int j = i + 1;j < 7;++7){
+                   a[j] = a[j - 1];
+               }
+               a[i] = x;
+           }
+           break;
+       }
+       for(int i = 0;i < 6;++i){ <br/>
+           printf("%d\t",a[i]); <br/>
+       }<br/>
+   } <br/>
