--- a/hw10.md
+++ b/hw10.md
@@ -33,18 +33,19 @@ Push “anne”; Push “get”; Push “your” ; Pop; Push “my” Push “gu
        for(int i = 0;i < 6;++i){ <br/>
            scanf("%d",&a[i]); <br/>
        } <br/>
-       int x;
-       scanf("%d",&x);
-       for(int i = 0;i < 6;++i){
-           if(a[i] > x){
-               for(int j = i + 1;j < 7;++7){
-                   a[j] = a[j - 1];
-               }
-               a[i] = x;
-           }
-           break;
-       }
+       int x;<br/>
+       scanf("%d",&x);<br/>
+       for(int i = 0;i < 6;++i){<br/>
+           if(a[i] > x){<br/>
+               for(int j = i + 1;j < 7;++7){<br/>
+                   a[j] = a[j - 1];<br/>
+               }<br/>
+               a[i] = x;<br/>
+           }<br/>
+           break;<br/>
+       }<br/>
        for(int i = 0;i < 6;++i){ <br/>
            printf("%d\t",a[i]); <br/>
        }<br/>
    } <br/>
+3. 尚未学习，应该是下节课的作业。
