--- a/hw10.md
+++ b/hw10.md
@@ -29,7 +29,7 @@ Push “anne”; Push “get”; Push “your” ; Pop; Push “my” Push “gu
    } <br/>
 2. #include <stdio.h> <br/>
    int main() { <br/>
-       int a[6] = {0} ; <br/>
+       int a[10] = {0} ; <br/>
        for(int i = 0;i < 6;++i){ <br/>
            scanf("%d",&a[i]); <br/>
        } <br/>
@@ -37,7 +37,7 @@ Push “anne”; Push “get”; Push “your” ; Pop; Push “my” Push “gu
        scanf("%d",&x);<br/>
        for(int i = 0;i < 7;++i){<br/>
            if(a[i] > x){<br/>
-               for(int j = i + 1;j < 7;++7){<br/>
+               for(int j = 7;j > i;--j){<br/>
                    a[j] = a[j - 1];<br/>
                }<br/>
                a[i] = x;<br/>
