--- a/hw10.md
+++ b/hw10.md
@@ -35,14 +35,19 @@ Push “anne”; Push “get”; Push “your” ; Pop; Push “my” Push “gu
        } <br/>
        int x;<br/>
        scanf("%d",&x);<br/>
+       int k = 1;<br/>
        for(int i = 0;i < 7;++i){<br/>
            if(a[i] > x){<br/>
                for(int j = 7;j > i;--j){<br/>
                    a[j] = a[j - 1];<br/>
                }<br/>
                a[i] = x;<br/>
+               k = 0;<br/>
+               break;<br/>
            }<br/>
-           break;<br/>
+       }<br/>
+       if(k == 1){ <br/>
+           a[6] = x; <br/>
        }<br/>
        for(int i = 0;i < 6;++i){ <br/>
            printf("%d\t",a[i]); <br/>
