--- a/hw10.md
+++ b/hw10.md
@@ -53,4 +53,5 @@ Push “anne”; Push “get”; Push “your” ; Pop; Push “my” Push “gu
            printf("%d\t",a[i]); <br/>
        }<br/>
    } <br/>
+   解释：开头和末尾是两个非常特殊的情况，稍不注意就会将其漏掉；导致无法真正实现插入，所以要单独检查；而放在中间是为了检查程序的一般性。
 3. 尚未学习，应该是下节课的作业。
