--- a/hw10.md
+++ b/hw10.md
@@ -1,9 +1,9 @@
 # 作业10
 ## 题目
-1. Bubble Sort the list: 33, 56, 17, 8, 95, 22。Make sure the final result is from small to large. Write out the list after the <br/> 2nd pass
-(10 points) <br/>
-2. Give a sorted array as list={60,65,75,80,90,95}. Design an algorithm to insert the value of x into the sorted array. Then test <br/> the 
-algorithm with value 50,67,99.<br/>
+1. Bubble Sort the list: 33, 56, 17, 8, 95, 22。Make sure the final result is from small to large. Write out the list after the <br/> 
+2nd pass (10 points) <br/>
+2. Give a sorted array as list={60,65,75,80,90,95}. Design an algorithm to insert the value of x into the sorted array. Then test <br/> 
+the algorithm with value 50,67,99.<br/>
 思考：为什么选择插入点在list头上、中间、尾巴上的三个数作为算法测试的数据，你能解释吗？<br/>
 3. What is the state of the stack after the following sequence of Push and Pop operations?<br/>
 Push “anne”; Push “get”; Push “your” ; Pop; Push “my” Push “gun” <br/>
@@ -27,6 +27,8 @@ Push “anne”; Push “get”; Push “your” ; Pop; Push “my” Push “gu
            printf("%d\t",a[i]); <br/>
        }<br/>
    } <br/>
+   很容易知道，第一次排完后的顺序为  8，56，33，17，95，22
+   而第二次排完后的顺序也就是     8,17,56,33,95,22
 2. #include <stdio.h> <br/>
    int main() { <br/>
        int a[10] = {0} ; <br/>
