--- a/排序小结.md
+++ b/排序小结.md
@@ -19,11 +19,11 @@ for(int i = 0;i < 6;++i){ <br/>
 scanf("%d",&a[i]); <br/>
 } <br/>
 for(int j = 0;j < 6;++j){ <br/>
-for(int k = j;k < 6;++k){ <br/>
-if(a[j] > a[k]){ <br/>
-int c = a[j]; <br/>
-a[j] = a[i]; <br/>
-a[i] = c; <br/>
+for(int k = 0;k < 6 - j - 1;++k){ <br/>
+if(a[k] > a[k + 1]){ <br/>
+int c = a[k]; <br/>
+a[k] = a[k + 1]; <br/>
+a[k + 1] = c; <br/>
 }<br/>
 }<br/>
 }<br/>
@@ -32,8 +32,7 @@ printf("%d\t",a[i]); <br/>
 }<br/>
 } <br/>
 分析一下我们写的代码，首先第一部当然是将数据存进数组，这样才方便我们进行排序。<br/>
-之后我们进行了两层循环，这也是冒泡排序的核心。对于每一次第一层循环中数据，在内层循环中，与这个数后面的每一个数据进行比较，要是有比自己更满足排序
-要求的数据，那么就交换他们两个的位置，这样在这个位置上的数刚好就是符合要求的数，两层循环一结束，我们也就得到了要求的循环。
+之后我们进行了两层循环，这也是冒泡排序的核心。在每一次进行第一层循环的过程中，我们都会将剩下的数中的最大的数像泡泡一样上浮到子数组的最后一个数，这样就相当于依次找到剩下的数中的最大的数，整个循环结束后，我们就实现了排序。
 ![](https://img-blog.csdn.net/20160921091654436)
 冒泡排序效果概念图
 ## 插入排序
