--- a/hw10.md
+++ b/hw10.md
@@ -8,27 +8,27 @@ the algorithm with value 50,67,99.<br/>
 3. What is the state of the stack after the following sequence of Push and Pop operations?<br/>
 Push “anne”; Push “get”; Push “your” ; Pop; Push “my” Push “gun” <br/>
 ## 我的解答
-1. #include <stdio.h> <br/>
-   int main() { <br/>
-       int a[6] = {0} ; <br/>
-       for(int i = 0;i < 6;++i){ <br/>
-           scanf("%d",&a[i]); <br/>
-       } <br/>
-       for(int j = 0;j < 6;++j){ <br/>
-           for(int k = j;k < 6;++k){ <br/>
-               if(a[j] > a[k]){ <br/>
-                   int c = a[j]; <br/>
-                   a[j] = a[i]; <br/>
-                   a[i] = c; <br/>
-               }<br/>
-           }<br/>
-       }<br/>
-       for(int i = 0;i < 6;++i){ <br/>
-           printf("%d\t",a[i]); <br/>
-       }<br/>
-   } <br/>
-   很容易知道，第一次排完后的顺序为  8，56，33，17，95，22
-   而第二次排完后的顺序也就是     8,17,56,33,95,22
+1.#include <stdio.h> <br/>
+int main() { <br/>
+int a[6] = {0} ; <br/>
+for(int i = 0;i < 6;++i){ <br/>
+scanf("%d",&a[i]); <br/>
+} <br/>
+for(int j = 0;j < 6;++j){ <br/>
+for(int k = 0;k < 6 - j - 1;++k){ <br/>
+if(a[k] > a[k + 1]){ <br/>
+int c = a[k]; <br/>
+a[k] = a[k + 1]; <br/>
+a[k + 1] = c; <br/>
+}<br/>
+}<br/>
+}<br/>
+for(int i = 0;i < 6;++i){ <br/>
+printf("%d\t",a[i]); <br/>
+}<br/>
+} <br/>
+   很容易知道，第一次排完后的顺序为  33，17，8，56，22，95
+   而第二次排完后的顺序也就是     17，8，33，22，56，95
 2. #include <stdio.h> <br/>
    int main() { <br/>
        int a[10] = {0} ; <br/>
