--- a/排序小结.md
+++ b/排序小结.md
@@ -1,4 +1,4 @@
-# 插入排序与冒泡排序的算法分析（带实例）
+# 插入排序与冒泡排序与选择排序的算法分析（带实例）
 ## 冒泡排序
 ### 简介
 冒泡排序（Bubble Sort，台湾译为：泡沫排序或气泡排序）是一种简单的排序算法。它重复地走访过要排序的数列，一次比较两个元素，如果他们的顺序错误就把他们
@@ -77,10 +77,46 @@ printf("%d\t",a[i]); <br/>
 在《算法导论》这本书上，讲到插入排序时，他做了一个生动的比喻，即将这样的一个排序过程比作起扑克牌整理手牌，一张一张的整理。每次拿到一个新的数之后
 ，我们就将它和前面的数进行比较，很容易知道的是，前面的数相当于子项目，已经完全排序好了，所以我们就近比较，若满足要求，就不用进行下一次比较，
 但若不满足，就再向前比较，就像整理手牌从右到左的顺序一样，直到找到新数据该存在的位置。这样一套循环之后，我们的数据也就整理好了。
+## 选择排序
+### 简介
+选择排序(Selection sort)是一种简单直观的排序算法。它的工作原理如下。首先在未排序序列中找到最小元素，存放到排序序列的起始位置，然后，再从剩余未排序元
+素中继续寻找最小元素，然后放到排序序列末尾。以此类推，直到所有元素均排序完毕。
+### 步骤
+1. 在未排序序列中找到最小元素
+2. 用方法将其存放到排序序列的起始位置
+3. 从剩余未排序元素中继续寻找最小元素，然后放到排序序列末尾
+4. 以此类推直到所有元素均排序完毕。
+### 分析
+为了更直观的比较两者的异同点，与冒泡排序相同，我们在分析选择排序时，也用到相同的数据，即这次作业中的第一题。<br/>
+放上代码<br/>
+#include <stdio.h> <br/>
+int main() { <br/>
+int a[6] = {0} ; <br/>
+for(int i = 0;i < 6;++i){ <br/>
+scanf("%d",&a[i]); <br/>
+} <br/>
+int i,j,min;<br/>
+for(i = 0; i < 6; i++)<br/>
+{<br/>
+min = i;<br/>
+for (j = i + 1; j < 6; j++) {<br/>
+if (a[j] < a[min]) {<br/>
+min = j;<br/>
+}<br/>
+}<br/>
+if (min != i) {<br/>
+a[i] = a[min];<br/>
+} <br/>
+}<br/>
+}<br/>
+正常来说，选择排序是最容易想到的排序算法，因为他和我们人类的思考方式差不多，一个又一个的找到最小的数，第二小的数.....并将它们依次放在第一个，第二个，
+第三个.....位置上,如此一来，我们就很容易将一组数据排序好了。判断的方式是选择排序的核心，我们将记录下来的子序列中最小值的角标与i对比，若不相同就交换
+他们，这样就很巧妙地交换了两者的位置。
 ## 比较
-按照《算法导论》这本书上所说，两者的平均时间复杂度其实是差不多的，但是却又各有优点。冒泡排序是最为简单的排序方式，很适合新手，实用性也很广，
-但数据一多，处理起来就很慢。而插入排序，虽然在最坏情况下，和冒泡排序复杂程度差不多，但无论何时何种情况，他都优于冒泡排序，因此也是很实用的低级
-排序方式，但是插入排序有很多种改版，比如加入二分法的插入排序，抑或是与归并排序相结合。这样就提高了插入排序的上限，进一步增强了他的处理数据能力。
+按照《算法导论》这本书上所说，三者的平均时间复杂度其实是差不多的，但是却又各有优点。冒泡排序是最为简单的排序方式，很适合新手，实用性也很广，
+但数据一多，处理起来就很慢；而插入排序，虽然在最坏情况下，和冒泡排序复杂程度差不多，但无论何时何种情况，他都优于冒泡排序，因此也是很实用的低级
+排序方式，但是插入排序有很多种改版，比如加入二分法的插入排序，抑或是与归并排序相结合。这样就提高了插入排序的上限，进一步增强了他的处理数据能力；而选择
+排序也是一个很简单的排序算法，解决我们身边的数据绰绰有余，而且在我看来也是最贴近我们人类思考方式的算法，实用性一样非常的高。
 ## 总结
-这两种排序方法都是比较基础的方法，在处理大量数据时，显得有点力不从心，但是他们极强的可读性以及简便性为我们的日常生活的数据处理提供了极大的便利
+这三种排序方法都是比较基础的方法，在处理大量数据时，显得有点力不从心，但是他们极强的可读性以及简便性为我们的日常生活的数据处理提供了极大的便利
 ，而且他们的增强版也是我们的得力助手。所以认真学习并掌握其精髓是十分重要的！
