--- a/排序小结.md
+++ b/排序小结.md
@@ -113,6 +113,7 @@ a[i] = a[min];<br/>
 第三个.....位置上,如此一来，我们就很容易将一组数据排序好了。判断的方式是选择排序的核心，我们将记录下来的子序列中最小值的角标与i对比，若不相同就交换
 他们，这样就很巧妙地交换了两者的位置。
 ![](https://img-blog.csdn.net/20160921091628124)
+选择排序效果概念图
 ## 比较
 按照《算法导论》这本书上所说，三者的平均时间复杂度其实是差不多的，但是却又各有优点。冒泡排序是最为简单的排序方式，很适合新手，实用性也很广，
 但数据一多，处理起来就很慢；而插入排序，虽然在最坏情况下，和冒泡排序复杂程度差不多，但无论何时何种情况，他都优于冒泡排序，因此也是很实用的低级
