--- a/排序小结.md
+++ b/排序小结.md
@@ -1,4 +1,4 @@
-# 插入排序与冒泡排序与选择排序的算法分析（带实例）
+# 插入排序与冒泡排序与选择排序与桶排序的算法分析（带实例）
 ## 冒泡排序
 ### 简介
 冒泡排序（Bubble Sort，台湾译为：泡沫排序或气泡排序）是一种简单的排序算法。它重复地走访过要排序的数列，一次比较两个元素，如果他们的顺序错误就把他们
@@ -114,11 +114,56 @@ a[i] = a[min];<br/>
 他们，这样就很巧妙地交换了两者的位置。
 ![](https://img-blog.csdn.net/20160921091628124)
 选择排序效果概念图
+## 桶排序
+### 简介
+桶排序是另外一种以O(n)或者接近O(n)的复杂度排序的算法.它假设输入的待排序元素是等可能的落在等间隔的值区间内.一个长度为N的数组使用桶排序, 需要长度
+为N的辅助数组. 等间隔的区间称为桶, 每个桶内落在该区间的元素. 桶排序是基数排序的一种归纳结果。
+算法的主要思想: 待排序数组A[1...n]内的元素是随机分布在[0,1)区间内的的浮点数.辅助排序数组B[0....n-1]的每一个元素都连接一个链表.将A内每个元素乘以
+N(数组规模)取底,并以此为索引插入(插入排序)数组B的对应位置的连表中. 最后将所有的链表依次连接起来就是排序结果.
+### 步骤     
+1. 设置一个定量的数组当作空桶子。
+2. 寻访序列，并且把项目一个一个放到对应的桶子去。
+3. 对每个不是空的桶子进行排序。
+4. 从不是空的桶子里把项目再放回原来的序列中。
+### 分析
+我们大部分人是从期中考试的第一题认识到桶排序，这里就采用那道题为案例进行分析
+代码如下<br/>
+#include <stdio.h><br/>
+int main(void) {<br/>
+	int n;<br/>
+	scanf("%d", &n);<br/>
+	int num, sum = 0;<br/>
+	int bucket[10] = { 0 };<br/>
+	while (n--) {<br/>
+		scanf("%d", &num);<br/>
+		sum += num;<br/>
+		bucket[num] += 1;<br/>
+	}<br/>
+	if (bucket[0] == 0 || sum == 0 || sum %3 != 0) {<br/>
+		printf("no such number\n");<br/>
+	}else{<br/>
+		int i = 9;<br/>
+		while (i) {<br/>
+			while (bucket[i]--) {<br/>
+				printf("%d", i);<br/>
+			}<br/>
+			i--;<br/>
+		}<br/>
+		while (bucket[0]--) {<br/>
+			printf("%d", i);<br/>
+		}<br/>
+		printf("\n");<br/>
+	}<br/>
+	return 0;<br/>
+}<br/>
+正如老师分析题目时说的那样，桶排序，顾名思义，就是将不同种的数据装在不同的“桶”中，而相同的数据放在同一个桶中，然后我们想要排序数据就只需要对桶进行
+排序，这样在按照顺序输出就得到了我们想要的排序。桶排序比较适用于需排列数据较多，而且重复度较高的数据处理。
 ## 比较
-按照《算法导论》这本书上所说，三者的平均时间复杂度其实是差不多的，但是却又各有优点。冒泡排序是最为简单的排序方式，很适合新手，实用性也很广，
+按照《算法导论》这本书上所说，前三者的平均时间复杂度其实是差不多的，但是却又各有优点。冒泡排序是最为简单的排序方式，很适合新手，实用性也很广，
 但数据一多，处理起来就很慢；而插入排序，虽然在最坏情况下，和冒泡排序复杂程度差不多，但无论何时何种情况，他都优于冒泡排序，因此也是很实用的低级
 排序方式，但是插入排序有很多种改版，比如加入二分法的插入排序，抑或是与归并排序相结合。这样就提高了插入排序的上限，进一步增强了他的处理数据能力；而选择
-排序也是一个很简单的排序算法，解决我们身边的数据绰绰有余，而且在我看来也是最贴近我们人类思考方式的算法，实用性一样非常的高。
+排序也是一个很简单的排序算法，解决我们身边的数据绰绰有余，而且在我看来也是最贴近我们人类思考方式的算法，实用性一样非常的高。桶排序的复杂性非常小，
+所以十分高效，但是使用范围十分有限，但在那些情况下，用桶排序的优越性是不言而喻的。
 ## 总结
-这三种排序方法都是比较基础的方法，在处理大量数据时，显得有点力不从心，但是他们极强的可读性以及简便性为我们的日常生活的数据处理提供了极大的便利
-，而且他们的增强版也是我们的得力助手。所以认真学习并掌握其精髓是十分重要的！
+前三种排序方法都是比较基础的方法，在处理大量数据时，显得有点力不从心，但是他们极强的可读性以及简便性为我们的日常生活的数据处理提供了极大的便利
+，而且他们的增强版也是我们的得力助手。所以认真学习并掌握其精髓是十分重要的！而桶排序虽然少见，却对于某一类数据的处理十分高效，所以我们也要熟练地掌握！
