--- a/排序小结.md
+++ b/排序小结.md
@@ -1,4 +1,4 @@
-# 插入排序与冒泡排序与选择排序与桶排序的算法分析（带实例）
+# 插入排序、冒泡排序、选择排序、桶排序的算法分析（带实例）
 ## 冒泡排序
 ### 简介
 冒泡排序（Bubble Sort，台湾译为：泡沫排序或气泡排序）是一种简单的排序算法。它重复地走访过要排序的数列，一次比较两个元素，如果他们的顺序错误就把他们
